# Smart-Traffic-Management-System

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  setup.py  test_web_interface.py
backend/: README.md  pyrightconfig.json  requirements.txt  run_web_interface.py
backend/config/: __init__.py  settings.py
backend/examples/: detect_cars.py  traffic_control_demo.py
backend/src/: main.py  traffic_monitor.py
backend/src/camera/: camera_manager.py
backend/src/traffic_control/: controller.py  signal_controller.py
backend/src/vehicle_detection/: detector.py
backend/src/web_interface/: app.py
backend/src/web_interface/templates/: index.html
backend/tests/: test_car_detection.py  test_signal_controller.py
config/: config.py
examples/: create_test_image.py
frontend/: README.md  netlify.toml  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: EmergencyPanel.js  SignalControls.js  TrafficAnalytics.js  TrafficCamera.js  TrafficMap.js  VehicleStats.js
src/: config.py  main.py  traffic_monitor.py
src/camera/: camera_manager.py
src/car_detection/: __init__.py
src/static/css/: style.css
src/templates/: base.html  emergency_modal.html
src/traffic_control/: __init__.py  signal_controller.py
src/web/: web_interface.py
src/web/static/css/: style.css
src/web/static/js/: main.js
src/web/templates/: index.html
src/web_interface/: __init__.py
src/web_interface/templates/: index.html
tests/: __init__.py  conftest.py  test_environment.py  test_traffic_control.py
(+3 files in other folders)
