[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart_traffic"
version = "0.1"
description = "Smart Traffic Management System using AI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "tensorflow>=2.13.0",
    "flask>=2.3.0",
    "flask-socketio>=5.3.0",
    "pillow>=10.0.0",
] 